; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_init_context.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-windows.c_gl_init_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gl_init_context.attribs = internal constant [8 x i32] [i32 128, i32 133, i32 130, i32 3, i32 129, i32 3, i32 0, i32 0], align 16
@LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"wglCreateContextAttribsARB failed, %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @gl_init_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @gl_init_context(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32* @wglCreateContextAttribsARB(i32 %5, i32 0, i32* getelementptr inbounds ([8 x i32], [8 x i32]* @gl_init_context.attribs, i64 0, i64 0))
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @LOG_ERROR, align 4
  %11 = call i32 (...) @GetLastError()
  %12 = call i32 @blog(i32 %10, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32* null, i32** %2, align 8
  br label %23

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @wgl_make_current(i32 %14, i32* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %13
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @wglDeleteContext(i32* %19)
  store i32* null, i32** %2, align 8
  br label %23

21:                                               ; preds = %13
  %22 = load i32*, i32** %4, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %21, %18, %9
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i32* @wglCreateContextAttribsARB(i32, i32, i32*) #1

declare dso_local i32 @blog(i32, i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @wgl_make_current(i32, i32*) #1

declare dso_local i32 @wglDeleteContext(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
